--- a/src/components/SiteMap/_site_map.scss
+++ b/src/components/SiteMap/_site_map.scss
@@ -43,7 +43,7 @@
   padding: 4.7rem 0 2.5rem 0;
 
   @include media-breakpoint-up(xs) {
-    padding: 2rem 0 2rem 0;
+    padding: 2rem 0;
   }
 }
 
